--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <title>___ Is A Fish?</title>
 <meta charset="UTF-8">
+<meta content="is-a.fish - Free Email Subdomains" property="og:title">
+<meta content="Gamer@is-a.fish   <-   This could be you!" property="og:description">
+<meta content="is-a.fish" property="og:site_name">
+<meta content='https://cdn.discordapp.com/attachments/832422560493731901/853782312961835048/fis.jpeg' property='og:image'>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
