--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body, html {height: 100%}
   <div class="w3-display-left" style="margin-left: 20px;">
     <h1 class="w3-jumbo w3-animate-top w3-center" style="color: #fff;">The Superior Email Domain</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center"><a href="https://discord.gg/9e82gZ7xbv" style="color: #8FD4FB;">Get one here</a></p>
+    <p class="w3-large w3-center"><a href="https://discord.gg/erREZ64rBt" style="color: #8FD4FB;">Get one here</a></p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
     Owned by <a href="https://github.com/PixelMelt" target="_blank">Pix#7008</a>
