--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<title>___ Is A Fish?</title>
+<title>PixelMelt.dev</title>
 <meta charset="UTF-8">
-<meta content="is-a.fish - Free Email Subdomains" property="og:title">
-<meta content="Gamer@is-a.fish   <-   This could be you!" property="og:description">
-<meta content="is-a.fish" property="og:site_name">
+<meta content="Hey!" property="og:title">
+<meta content="PixelMelts offical website" property="og:description">
+<meta content="pixelmelt.dev" property="og:site_name">
 <meta content='https://cdn.discordapp.com/attachments/832422560493731901/853782312961835048/fis.jpeg' property='og:image'>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -23,12 +23,12 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    is-a.fish
+    PixelMelt.dev
   </div>
   <div class="w3-display-left" style="margin-left: 20px;">
-    <h1 class="w3-jumbo w3-animate-top w3-center" style="color: #fff;">The Superior Email Domain</h1>
+    <h1 class="w3-jumbo w3-animate-top w3-center" style="color: #fff;">The Superior Idiot</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center"><a href="https://discord.gg/erREZ64rBt" style="color: #8FD4FB;">Get one here</a></p>
+    //<p class="w3-large w3-center"><a href="https://discord.gg/erREZ64rBt" style="color: #8FD4FB;">Get one here</a></p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
     Owned by <a href="https://github.com/PixelMelt" target="_blank">Pix#7008</a>
