--- a/card/sb.html
+++ b/card/sb.html
@@ -31247,7 +31247,7 @@ input[type=range]:focus::-ms-fill-upper{background:hsl(200,60%,55%)}.github-fork
         var res = " ";
         var speed = 100;
         var pos = val;
-        msg = "   |-"+msg+"-|";
+        msg = " • "+msg+" • ";
         var le = msg.length;
         if(rev == "fwd"){
             if(pos < le){
