--- a/card/sb.html
+++ b/card/sb.html
@@ -31243,7 +31243,7 @@ input[type=range]:focus::-ms-fill-upper{background:hsl(200,60%,55%)}.github-fork
 <script language=javascript>
     var rev = "fwd";
     function titlebar(val){
-        var msg  = "A Client Web - Created By Pix#7008 on Discord";
+        var msg  = "A Client - Pix#7008";
         var res = " ";
         var speed = 100;
         var pos = val;
