--- a/card/sb.html
+++ b/card/sb.html
@@ -922,7 +922,7 @@ a:visited {
 .donate-btn:hover,
 .ecpbtn:hover {
     transition-delay: 1s;
-    transition-property: background;
+    transition: background 0.5s ease-out 100ms
     background: linear-gradient(276deg,hsl(146deg 100% 50% / 23%) 0,hsl(274deg 100% 50% / 38%) 100%);
     box-shadow: 0 0 8px hsla(200, 100%, 90%, 1);
     color: #FFF
