--- a/card/sb.html
+++ b/card/sb.html
@@ -914,15 +914,14 @@ a:visited {
     text-shadow: 0 0 7px hsla(200, 100%, 80%, 1);
     color: hsla(200, 100%, 90%, .8);
     font-family: Play, Verdana;
-    border: 0
-    transition: background 0.5s ease-out 100ms
+    border: 0;
+    transition: background 2s ease-out 100ms
 }
 
 #player button:hover,
 #respawn_actions button:hover,
 .donate-btn:hover,
 .ecpbtn:hover {
-    transition-delay: 1s;
     background: linear-gradient(276deg,hsl(146deg 100% 50% / 23%) 0,hsl(274deg 100% 50% / 38%) 100%);
     box-shadow: 0 0 8px hsla(200, 100%, 90%, 1);
     color: #FFF
@@ -16837,7 +16836,7 @@ input[type=range]:focus::-ms-fill-upper {
                     }
                 }(this)), document.addEventListener("keydown", function(t) {
                     return function(e) {
-                        if (e = e || window.event, 27 === e.keyCode && ("block" === r.style.display && (r.style.display = "none", t.lIll0()), "block" === D.style.display && t.closeModal()), document.querySelector("#player input") !== document.activeElement) {
+                        if (e = e || window.event, 27 === e.keyCode && ("block" === r.style.display && (r.style.display = "none", t.lIll0()), "block" === D.style.display && t.closeModal()), document.querySelector("linear-gradient(131deg,hsl(146deg 100% 50% / 23%) 0,hsl(274deg 100% 50% / 38%) 100%)er input") !== document.activeElement) {
                             if (!t.I1OlI && 39 === e.keyCode) {
                                 if ("block" === D.style.display) return;
                                 document.getElementById("play").focus(), t.changeGameMode(1)
@@ -33434,7 +33433,7 @@ input[type=range]:focus::-ms-fill-upper {
     function titlebar(val){
         var msg  = "A Client - Pix#7008";
         var res = " ";
-        var speed = 90;
+        var speed = 80;
         var pos = val;
         msg = " "+msg+" ";
         var le = msg.length;
