--- a/card/sb.html
+++ b/card/sb.html
@@ -915,7 +915,7 @@ a:visited {
     color: hsla(200, 100%, 90%, .8);
     font-family: Play, Verdana;
     border: 0;
-    transition: background 2s ease-out 100ms
+    transition: background 2s ease-out 100ms;
 }
 
 #player button:hover,
