--- a/card/sb.html
+++ b/card/sb.html
@@ -909,11 +909,11 @@ a:visited {
     cursor: pointer;
     margin: 20px 0 20px 0;
     text-align: center;
-    background: linear-gradient(131deg, hsl(146deg 100% 50% / 23%) 0, hsl(274deg 100% 50% / 38%) 100%);
     box-shadow: 0 0 6px hsla(200, 100%, 80%, 1);
     text-shadow: 0 0 7px hsla(200, 100%, 80%, 1);
     color: hsla(200, 100%, 90%, .8);
     font-family: Play, Verdana;
+    background: linear-gradient(131deg, hsl(146deg 100% 50% / 23%) 0, hsl(274deg 100% 50% / 38%) 100%);
     border: 0;
     transition: background 2s ease-out 100ms;
 }
@@ -922,9 +922,10 @@ a:visited {
 #respawn_actions button:hover,
 .donate-btn:hover,
 .ecpbtn:hover {
-    background: linear-gradient(276deg,hsl(146deg 100% 50% / 23%) 0,hsl(274deg 100% 50% / 38%) 100%);
+    background: linear-gradient(310deg, hsl(146deg 100% 50% / 23%) 0, hsl(274deg 100% 50% / 38%) 100%);
     box-shadow: 0 0 8px hsla(200, 100%, 90%, 1);
-    color: #FFF
+    color: #FFF;
+    transition: background 2s ease-out 100ms;
 }
 
 .playbtn {
