--- a/card/sb.html
+++ b/card/sb.html
@@ -747,9 +747,9 @@ a:visited {
 .stats i:hover {
     background: #000;
     border: 0 solid hsl(200, 90%, 70%);
-    background: radial-gradient(ellipse at center, hsla(200, 50%, 0%, 1) 0, hsla(200, 70%, 70%, .5) 100%);
+    background: linear-gradient(310deg, hsl(146deg 100% 50% / 23%) 0, hsl(274deg 100% 50% / 38%) 100%);
     box-shadow: 0 0 6px hsla(200, 100%, 80%, 1);
-    text-shadow: 0 0 7px hsla(200, 100%, 80%, 1);
+    text-shadow: 0 0 7px hsl(293deg 74% 52%);
     color: #FFF
 }
 
