--- a/card/sb.html
+++ b/card/sb.html
@@ -493,7 +493,7 @@ a:visited {
     color: #EEE;
     text-shadow: 0 0 3px #000, 0 0 3px #000, 0 0 3px #000, 0 0 3px #000;
     transition: opacity .5s ease;
-    box-shadow: 0 0 6px hsla(200, 80%, 80%, 1);
+    box-shadow: 0 0 6px hsl(293deg 74% 52%);
     text-shadow: 0 0 2px hsla(200, 80%, 80%, .3);
     color: hsla(200, 90%, 90%, .8)
 }
@@ -653,7 +653,7 @@ a:visited {
 }
 
 .followtools a.big {
-    text-shadow: 0 0 7px hsla(200, 100%, 80%, 1);
+    text-shadow: 0 0 7px hsl(293deg 74% 52%);
     text-align: center;
     width: 217px;
     margin: 4px 4px 10px 4px;
@@ -663,7 +663,7 @@ a:visited {
 }
 
 .followtools a.big i {
-    text-shadow: 0 0 1px hsla(200, 100%, 80%, .2);
+    text-shadow: 0 0 7px hsl(293deg 74% 52%);
     font-size: 2.8em
 }
 
@@ -737,7 +737,7 @@ a:visited {
     cursor: pointer;
     background: linear-gradient(131deg, hsl(146deg 100% 50% / 23%) 0, hsl(274deg 100% 50% / 38%) 100%);
     box-shadow: 0 0 6px hsla(200, 100%, 80%, 1);
-    text-shadow: 0 0 7px hsla(200, 100%, 80%, 1);
+    text-shadow: 0 0 7px hsl(293deg 74% 52%);
     color: hsla(200, 100%, 90%, .8)
 }
 
@@ -777,8 +777,8 @@ a:visited {
 .inputwrapper {
     display: inline-block;
     background: linear-gradient(to top, hsla(200, 70%, 70%, .5) 0, hsla(200, 50%, 0%, 1) 20%, hsla(200, 50%, 0%, 1) 60%, hsla(200, 20%, 40%, .5) 100%);
-    box-shadow: 0 0 6px hsla(200, 80%, 80%, 1);
-    text-shadow: 0 0 7px hsla(200, 80%, 80%, 1);
+    box-shadow: 0 0 6px hsl(293deg 74% 52%);
+    text-shadow: 0 0 7px hsl(293deg 74% 52%);
     border-radius: 4px;
     height: 43px;
     margin-top: 10px;
@@ -841,7 +841,7 @@ a:visited {
     outline: 0;
     background: transparent;
     transition: all .5s ease;
-    text-shadow: 0 0 7px hsla(200, 80%, 80%, 1);
+    text-shadow: 0 0 7px hsl(293deg 74% 52%);
     color: hsla(200, 90%, 90%, .8)
 }
 
@@ -856,9 +856,9 @@ a:visited {
     outline: 0;
     transition: all .5s ease;
     background: linear-gradient(to top, hsla(200, 70%, 70%, .5) 0, hsla(200, 50%, 0%, 1) 20%, hsla(200, 50%, 0%, 1) 60%, hsla(200, 20%, 40%, .5) 100%);
-    box-shadow: 0 0 6px hsla(200, 80%, 80%, 1);
+    box-shadow: 0 0 6px hsl(293deg 74% 52%);
     color: hsla(200, 90%, 90%, .8);
-    text-shadow: 0 0 7px hsla(200, 80%, 80%, 1);
+    text-shadow: 0 0 7px hsl(293deg 74% 52%);
     border-radius: 4px;
     font-size: 1.2em
 }
@@ -1999,7 +1999,7 @@ canvas {
     display: inline-block;
     padding: 4px;
     vertical-align: middle;
-    text-shadow: 0 0 7px hsla(200, 80%, 80%, 1);
+    text-shadow: 0 0 7px hsl(293deg 74% 52%);
     border: 0;
     outline: 0;
     background: rgba(255, 255, 255, .1);
