--- a/card/sb.html
+++ b/card/sb.html
@@ -677,9 +677,9 @@ a:visited {
 .followtools a.gold,
 .followtools a.gold:visited,
 #donate_mobile {
-    text-shadow: 0 0 7px hsla(20, 100%, 80%, 1);
+    text-shadow: 0 0 7px hsl(290deg 83% 76% / 42%);
     background: linear-gradient(131deg, hsl(146deg 100% 50% / 23%) 0, hsl(274deg 100% 50% / 38%) 100%);
-    box-shadow: 0 0 6px hsla(20, 100%, 80%, 1);
+    box-shadow: 0 0 6px hsl(200deg 100% 80%);
     color: hsla(20, 100%, 90%, .9)
 }
 
