--- a/card/sb.html
+++ b/card/sb.html
@@ -16841,7 +16841,7 @@ input[type=range]:focus::-ms-fill-upper {
                     }
                 }(this)), document.addEventListener("keydown", function(t) {
                     return function(e) {
-                        if (e = e || window.event, 27 === e.keyCode && ("block" === r.style.display && (r.style.display = "none", t.lIll0()), "block" === D.style.display && t.closeModal()), document.querySelector("linear-gradient(131deg,hsl(146deg 100% 50% / 23%) 0,hsl(274deg 100% 50% / 38%) 100%)er input") !== document.activeElement) {
+                        if (e = e || window.event, 27 === e.keyCode && ("block" === r.style.display && (r.style.display = "none", t.lIll0()), "block" === D.style.display && t.closeModal()), document.querySelector("player input") !== document.activeElement) {
                             if (!t.I1OlI && 39 === e.keyCode) {
                                 if ("block" === D.style.display) return;
                                 document.getElementById("play").focus(), t.changeGameMode(1)
